Nintendo 3DS Updated Makefile.

--- a/emu/3ds/cpp_hello.htm
+++ b/emu/3ds/cpp_hello.htm
@@ -50,7 +50,8 @@
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://libctru.devkitpro.org/index.html">libctru doc</a><br><br>
+1. <a href="https://libctru.devkitpro.org/index.html">libctru doc</a><br>
+2. <a href="https://github.com/devkitPro/3ds-examples">3ds-examples</a><br><br>
 
 說明：
 </p>
@@ -95,8 +96,8 @@ Makefile
 include $(DEVKITARM)/3ds_rules
 
 all:
-    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro//libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -D__3DS__ -c main.c -o main.o 
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lmodplug -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
+    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -D__3DS__ -c main.c -o main.o 
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
     smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
     3dsxtool main.elf main.3dsx --smdh=main.smdh
 
@@ -111,8 +112,8 @@ clean:
 $ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
 
 root@c18881035cba:/source# make
-    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro//libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -D__3DS__ -c main.c -o main.o 
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lmodplug -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
+    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -D__3DS__ -c main.c -o main.o 
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
     smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
     3dsxtool main.elf main.3dsx --smdh=main.smdh
 
