Nintendo 3DS An example to show how to play opus audio file in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -523,6 +523,10 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_streaming.htm">
   Audio (Streaming)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_opus.htm">
+  Audio (Opus)</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
