--- a/emu/3ds/cpp_hello.htm
+++ b/emu/3ds/cpp_hello.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo 3DS &gt;&gt; C/C++</h3>
-<p><b>hello, world!</b></p>
+<p><b>Hello, world!</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -96,8 +96,8 @@ Makefile
 include $(DEVKITARM)/3ds_rules
 
 all:
-    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -D__3DS__ -c main.c -o main.o 
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
+    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -I/opt/devkitpro/portlibs/3ds/include/SDL -D__3DS__ -c main.c -o main.o 
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lSDL -lSDL_gfx -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
     smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
     3dsxtool main.elf main.3dsx --smdh=main.smdh
 
@@ -110,16 +110,7 @@ clean:
 </p>
 <pre>
 $ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
-
-root@c18881035cba:/source# make
-    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -D__3DS__ -c main.c -o main.o 
-    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
-    smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
-    3dsxtool main.elf main.3dsx --smdh=main.smdh
-
-root@c18881035cba:/source# exit
-    exit
-
+root@c18881035cba:/source# make &amp;&amp; exit
 $ citra main.3dsx
 </pre><br>
 
