Nintendo 3DS An example to show how to program 'hello, world!' for SDL in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -478,7 +478,7 @@ Nintendo 3DS</h3>
   
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_hello.htm">
-  hello, world!</a><br>
+  Hello, world!</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_pixels.htm">
@@ -527,6 +527,13 @@ Nintendo 3DS</h3>
   &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_opus.htm">
   Audio (Opus)</a><br>
+
+  &emsp;&emsp;&oplus;
+  SDL v1.2<br>
+  
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
