Nintendo 3DS A SDL example to show how to fill color in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -534,6 +534,10 @@ Nintendo 3DS</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_hello.htm">
     Hello, world!</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_fill.htm">
+    Fill Color</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
