--- a/emu.htm
+++ b/emu.htm
@@ -538,6 +538,10 @@ Nintendo 3DS</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_fill.htm">
     Fill Color</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_box.htm">
+    Draw Box</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
