--- a/emu.htm
+++ b/emu.htm
@@ -542,6 +542,10 @@ Nintendo 3DS</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_box.htm">
     Draw Box</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_bmp.htm">
+    Load BMP</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
