Nintendo 3DS Refined code.

--- a/emu/3ds/sdl_box.htm
+++ b/emu/3ds/sdl_box.htm
@@ -69,10 +69,10 @@ main.c
 #include &lt;SDL.h&gt;
 #include &lt;SDL_gfxPrimitives.h&gt;
  
-int main(int argc, char** argv)
+int main(void)
 {
     SDL_Rect rt={0};
-    SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
     SDL_Init(SDL_INIT_VIDEO);
     screen = SDL_SetVideoMode(400, 240, 16, SDL_HWSURFACE); 
