--- a/emu/3ds/sdl_fill.htm
+++ b/emu/3ds/sdl_fill.htm
@@ -68,10 +68,10 @@ main.c
 #include &lt;stdlib.h&gt;
 #include &lt;SDL.h&gt;
  
-int main(int argc, char** argv)
+int main(void)
 {
     SDL_Rect rt={0};
-    SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
     SDL_Init(SDL_INIT_VIDEO);
     screen = SDL_SetVideoMode(400, 240, 16, SDL_HWSURFACE);
