--- a/emu/3ds/sdl_bmp.htm
+++ b/emu/3ds/sdl_bmp.htm
@@ -71,9 +71,9 @@ main.c
 #include &lt;unistd.h&gt;
 #include &lt;SDL.h&gt;
   
-int main(int argc, char** argv)
+int main(void)
 {
-    SDL_Surface* screen = NULL;
+    SDL_Surface *screen = NULL;
  
     SDL_Init(SDL_INIT_VIDEO);
     screen = SDL_SetVideoMode(400, 240, 16, SDL_HWSURFACE);
