--- a/emu/3ds/sdl_hello.htm
+++ b/emu/3ds/sdl_hello.htm
@@ -76,7 +76,7 @@ main.c
  
 int main(void)
 {
-    SDL_Surface* screen;
+    SDL_Surface *screen = NULL;
 
     SDL_Init(SDL_INIT_VIDEO);
     screen = SDL_SetVideoMode(400, 240, 16, SDL_HWSURFACE);
