Nintendo 3DS A SDL example to show how to save bmp file in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -546,6 +546,10 @@ Nintendo 3DS</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_bmp.htm">
     Load BMP</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_savebmp.htm">
+    Save BMP</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
