--- a/emu.htm
+++ b/emu.htm
@@ -550,6 +550,10 @@ Nintendo 3DS</h3>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_savebmp.htm">
     Save BMP</a><br>
+    
+    &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_screentearingtest.htm">
+    Screen Tearing Test</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
