--- a/emu.htm
+++ b/emu.htm
@@ -552,6 +552,10 @@ Nintendo 3DS</h3>
     Save BMP</a><br>
     
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_png.htm">
+    Load PNG</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
