--- a/program/sdl/v1.2/cpp_blit.htm
+++ b/program/sdl/v1.2/cpp_blit.htm
@@ -65,7 +65,7 @@ int main(int argc, char** argv)
  
   SDL_Init(SDL_INIT_VIDEO);
   screen = SDL_SetVideoMode(320, 240, 16, SDL_HWSURFACE);
-  SDL_FillRect(screen, &bmp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
+  SDL_FillRect(screen, &amp;screen-&gt;clip_rect, SDL_MapRGB(screen-&gt;format, 0x00, 0xff, 0x00));
  
   SDL_Surface* bmp = SDL_LoadBMP("main.bmp");
 
