--- a/emu.htm
+++ b/emu.htm
@@ -556,6 +556,10 @@ Nintendo 3DS</h3>
     Load PNG</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_blit.htm">
+    Copy Surface</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
