Nintendo 3DS A SDL example to show how to stretch surface in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -560,6 +560,10 @@ Nintendo 3DS</h3>
     Copy Surface</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_stretch.htm">
+    Stretch Surface</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
