--- a/emu.htm
+++ b/emu.htm
@@ -564,6 +564,10 @@ Nintendo 3DS</h3>
     Stretch Surface</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_convert.htm">
+    Convert Surface</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
