--- a/emu.htm
+++ b/emu.htm
@@ -568,6 +568,10 @@ Nintendo 3DS</h3>
     Convert Surface</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_colorkey.htm">
+    Color Key</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
