--- a/emu.htm
+++ b/emu.htm
@@ -572,6 +572,10 @@ Nintendo 3DS</h3>
     Color Key</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_joy.htm">
+    Joystick</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
