--- a/emu.htm
+++ b/emu.htm
@@ -580,6 +580,10 @@ SDL Key</a><br>
     Joystick</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_font.htm">
+    Open Font</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
