--- a/emu.htm
+++ b/emu.htm
@@ -584,6 +584,10 @@ SDL Key</a><br>
     Open Font</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_ticks.htm">
+    Get Ticks</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
