--- a/emu.htm
+++ b/emu.htm
@@ -588,6 +588,10 @@ SDL Key</a><br>
     Get Ticks</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_music.htm">
+    Load Music</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
