--- a/program/sdl/v1.2/cpp_effect.htm
+++ b/program/sdl/v1.2/cpp_effect.htm
@@ -61,7 +61,7 @@ main.c
 
 int main(int argc, char** argv)
 {
-  SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO);
+  SDL_Init(SDL_INIT_AUDIO);
   Mix_OpenAudio(44100, MIX_DEFAULT_FORMAT, 2, 4096);
  
   Mix_Music *music = Mix_LoadMUS("main.wav");
