--- a/emu.htm
+++ b/emu.htm
@@ -592,6 +592,10 @@ SDL Key</a><br>
     Load Music</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_effect.htm">
+    Music Effect</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
