--- a/emu.htm
+++ b/emu.htm
@@ -596,6 +596,10 @@ SDL Key</a><br>
     Music Effect</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_hookmusicfinish.htm">
+    Hook Music Finished</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
