Nintendo 3DS A SDL example to show how to manipulate pixels in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -600,6 +600,10 @@ SDL Key</a><br>
     Hook Music Finished</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_pixels.htm">
+    Pixels Manipulation</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
