--- a/emu.htm
+++ b/emu.htm
@@ -604,6 +604,10 @@ SDL Key</a><br>
     Pixels Manipulation</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_alpha.htm">
+    Set Alpha</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
