Nintendo 3DS A SDL example to show how to load bmp from memory in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -608,6 +608,10 @@ SDL Key</a><br>
     Set Alpha</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_bmp_rw.htm">
+    Load BMP from Memory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
