--- a/emu.htm
+++ b/emu.htm
@@ -612,6 +612,10 @@ SDL Key</a><br>
     Load BMP from Memory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_png_rw.htm">
+    Load PNG from Memory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
