--- a/emu.htm
+++ b/emu.htm
@@ -616,6 +616,10 @@ SDL Key</a><br>
     Load PNG from Memory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_font_rw.htm">
+    Load Font from Memory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
