SDL v1.2 Refined code.

--- a/program/sdl/v1.2/cpp_effect_rw.htm
+++ b/program/sdl/v1.2/cpp_effect_rw.htm
@@ -66,7 +66,7 @@ int main(int argc, char** argv)
 {
   SDL_RWops *rw=NULL;
 
-  SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO);
+  SDL_Init(SDL_INIT_AUDIO);
   Mix_OpenAudio(44100, MIX_DEFAULT_FORMAT, 2, 4096);
 
   rw = SDL_RWFromMem(hex_wav, sizeof(hex_wav));
