--- a/program/sdl/v1.2/cpp_music_rw.htm
+++ b/program/sdl/v1.2/cpp_music_rw.htm
@@ -63,7 +63,7 @@ main.c
  
 int main(int argc, char** argv)
 {
-  SDL_Init(SDL_INIT_VIDEO | SDL_INIT_AUDIO);
+  SDL_Init(SDL_INIT_AUDIO);
   Mix_OpenAudio(44100, MIX_DEFAULT_FORMAT, 2, 4096);
   
   SDL_RWops *rw = SDL_RWFromMem(hex_wav, sizeof(hex_wav));
