--- a/emu.htm
+++ b/emu.htm
@@ -620,6 +620,10 @@ SDL Key</a><br>
     Load Font from Memory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_music_rw.htm">
+    Load Music from Memory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
