Nintendo 3DS A SDL example to show how to load music effect from memory in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -624,6 +624,10 @@ SDL Key</a><br>
     Load Music from Memory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_effect_rw.htm">
+    Load Effect from Memory</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
