SDL v1.2 Refined code.

--- a/program/sdl/v1.2/cpp_thread.htm
+++ b/program/sdl/v1.2/cpp_thread.htm
@@ -56,7 +56,7 @@ main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;stdio.h&gt;
-#include "SDL.h"
+#include &lt;SDL.h&gt;
 
 static int mythread(void *args)
 {
