--- a/emu.htm
+++ b/emu.htm
@@ -628,6 +628,10 @@ SDL Key</a><br>
     Load Effect from Memory</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_thread.htm">
+    Thread</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
