Nintendo 3DS A SDL example to show how to draw pixel in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -632,6 +632,10 @@ SDL Key</a><br>
     Thread</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_pixel.htm">
+    Pixel</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
