Nintendo 3DS A SDL example to show how to draw line in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -636,6 +636,10 @@ SDL Key</a><br>
     Pixel</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_line.htm">
+    Line</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
