--- a/emu.htm
+++ b/emu.htm
@@ -640,6 +640,10 @@ SDL Key</a><br>
     Line</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_rectangle.htm">
+    Rectangle</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
