--- a/emu.htm
+++ b/emu.htm
@@ -644,6 +644,10 @@ SDL Key</a><br>
     Rectangle</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_circle.htm">
+    Circle</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
