Nintendo 3DS A SDL example to show how to draw ellipse in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -648,6 +648,10 @@ SDL Key</a><br>
     Circle</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_ellipse.htm">
+    Ellipse</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
