--- a/emu.htm
+++ b/emu.htm
@@ -652,6 +652,10 @@ SDL Key</a><br>
     Ellipse</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_pie.htm">
+    Pie</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
