--- a/emu.htm
+++ b/emu.htm
@@ -656,6 +656,10 @@ SDL Key</a><br>
     Pie</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_trigon.htm">
+    Trigon</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
