--- a/emu.htm
+++ b/emu.htm
@@ -660,6 +660,10 @@ SDL Key</a><br>
     Trigon</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_polygon.htm">
+    Polygon</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
