--- a/emu.htm
+++ b/emu.htm
@@ -664,6 +664,10 @@ SDL Key</a><br>
     Polygon</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_bezier.htm">
+    Bezier</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
