--- a/emu.htm
+++ b/emu.htm
@@ -668,6 +668,10 @@ SDL Key</a><br>
     Bezier</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_gfx_string.htm">
+    String</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
