Nintendo 3DS An example to show how to access vram in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -532,6 +532,10 @@ SDL Key</a><br>
   <a href="emu/3ds/cpp_opus.htm">
   Audio (Opus)</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_vram.htm">
+  VRAM</a><br>
+
   &emsp;&emsp;&oplus;
   SDL v1.2<br>
   
