--- a/emu.htm
+++ b/emu.htm
@@ -540,6 +540,10 @@ SDL Key</a><br>
   <a href="emu/3ds/cpp_linear.htm">
   Linear Memory</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_screentearingtest.htm">
+  Screen Tearing Test</a><br>
+
   &emsp;&emsp;&oplus;
   SDL v1.2<br>
   
