Nintendo 3DS An example to show how to write file in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -513,6 +513,10 @@ SDL Key</a><br>
   Software Keyboard</a><br>
   
   &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_file.htm">
+  File</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_dir.htm">
   Directory</a><br>
   
