Nintendo 3DS An example to show how to launch 3dsx application in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -548,6 +548,10 @@ SDL Key</a><br>
   <a href="emu/3ds/cpp_screentearingtest.htm">
   Screen Tearing Test</a><br>
 
+  &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_launch.htm">
+  Launch 3dsx Application</a><br>
+
   &emsp;&emsp;&oplus;
   SDL v1.2<br>
   
