--- a/emu.htm
+++ b/emu.htm
@@ -692,6 +692,10 @@ SDL Key</a><br>
     String</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="emu/3ds/sdl_scr.htm">
+    Top、Bottom Screen</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
 <br><br><br><br>
