--- a/emu.htm
+++ b/emu.htm
@@ -698,6 +698,14 @@ SDL Key</a><br>
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="emu/3ds/sdl_screentearingtest.htm">
     Screen Tearing Test</a><br>
+  
+    &emsp;&emsp;&oplus;
+    GPU<br>
+  
+      &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_sprite.htm">
+      Sprite</a><br>
+    
 <br><br><br><br>
 
 <div id="pspgo"></div>
