--- a/emu/3ds/sdl_hello.htm
+++ b/emu/3ds/sdl_hello.htm
@@ -91,6 +91,31 @@ int main(void)
 </pre><br>
 
 <p>
+Makefile
+</p>
+<pre>
+include $(DEVKITARM)/3ds_rules
+
+all:
+    arm-none-eabi-gcc -mword-relocations -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -I/opt/devkitpro/libctru/include -I/opt/devkitpro/portlibs/3ds/include/ -I/opt/devkitpro/portlibs/3ds/include/opus/ -I/opt/devkitpro/portlibs/3ds/include/SDL -D__3DS__ -c main.c -o main.o 
+    arm-none-eabi-gcc -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft main.o -L/opt/devkitpro/portlibs/3ds/lib -lopusfile -logg -lopus -L/opt/devkitpro/libctru/lib -lSDL_image -lSDL_mixer -lSDL_ttf -lSDL_gfx -lSDL -lfreetype -lbz2 -lpng -ljpeg -lz -lcitro2d -lcitro3d -lctru -lm -lstdc++ -o main.elf
+    smdhtool --create "main" "devkitARM" "steward" /opt/devkitpro/libctru/default_icon.png main.smdh
+    3dsxtool main.elf main.3dsx --smdh=main.smdh
+
+clean:
+    rm -rf main.o main.elf main.3dsx main.smdh
+</pre><br>
+
+<p>
+編譯、執行
+</p>
+<pre>
+$ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
+root@c18881035cba:/source# make &amp;&amp; exit
+$ citra main.3dsx
+</pre><br>
+
+<p>
 完成<br>
 <img src="sdl_hello/1.jpg" class="maxSize">
 </p>
