--- a/emu.htm
+++ b/emu.htm
@@ -706,6 +706,9 @@ SDL Key</a><br>
       <a href="emu/3ds/gpu_sprite.htm">
       Sprite</a><br>
     
+      &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_fill.htm">
+      Fill Color</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
