Nintendo 3DS A GPU example to show how to do screen tearing test in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -709,6 +709,10 @@ SDL Key</a><br>
       &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_fill.htm">
       Fill Color</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_screentearingtest.htm">
+      Screen Tearing Test</a><br>
 <br><br><br><br>
 
 <div id="pspgo"></div>
