--- a/emu.htm
+++ b/emu.htm
@@ -711,6 +711,10 @@ SDL Key</a><br>
       Fill Color</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_triangle.htm">
+      Triangle</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
