--- a/emu.htm
+++ b/emu.htm
@@ -715,6 +715,10 @@ SDL Key</a><br>
       Triangle</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_line.htm">
+      Line</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
