--- a/emu.htm
+++ b/emu.htm
@@ -719,6 +719,10 @@ SDL Key</a><br>
       Line</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_rectangle.htm">
+      Rectangle</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
