Nintendo 3DS A GPU example to show how to draw ellipse in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -723,6 +723,10 @@ SDL Key</a><br>
       Rectangle</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_ellipse.htm">
+      Ellipse</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
