--- a/emu.htm
+++ b/emu.htm
@@ -727,6 +727,10 @@ SDL Key</a><br>
       Ellipse</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_circle.htm">
+      Circle</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
