Nintendo 3DS A GPU example to show how to load font and then draw text in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -727,6 +727,10 @@ SDL Key</a><br>
       Circle</a><br>
     
       &emsp;&emsp;&emsp;&emsp;&lowast;
+      <a href="emu/3ds/gpu_font.htm">
+      Font</a><br>
+    
+      &emsp;&emsp;&emsp;&emsp;&lowast;
       <a href="emu/3ds/gpu_screentearingtest.htm">
       Screen Tearing Test</a><br>
 <br><br><br><br>
