Nintendo 3DS How to build toolchain for aarch64 platform.

--- a/emu.htm
+++ b/emu.htm
@@ -470,6 +470,46 @@ Nintendo 3DS</h3>
 SDL Key</a><br>
 
 &lowast;
+<a href="emu/ndsl/build_grit.htm">
+build grit</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_libnds.htm">
+build libnds</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_libfat.htm">
+build libfat</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_dswifi.htm">
+build dswifi</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_mmutil.htm">
+build mmutil</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_maxmod.htm">
+build maxmod</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_ndstool.htm">
+build ndstool</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_nds-examples.htm">
+build nds-examples</a><br>
+
+&lowast;
+<a href="emu/ndsl/build_general-tools.htm">
+build general-tools</a><br>
+
+&lowast;
+<a href="emu/3ds/build_devkitpro.htm">
+build devkitpro (CROSSBUILD=aarch64-linux-gnu)</a><br>
+
+&lowast;
 <a href="emu/3ds/fix_crossbuild.htm">
 解決"gcc.cc: undefined reference to host_detect_local_cpu(int, char const**)"問題</a><br>
 
