--- a/emu.htm
+++ b/emu.htm
@@ -498,6 +498,10 @@ build maxmod</a><br>
 build ndstool</a><br>
 
 &lowast;
+<a href="emu/3ds/build_picasso.htm">
+build picasso</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_nds-examples.htm">
 build nds-examples</a><br>
 
