--- a/emu.htm
+++ b/emu.htm
@@ -502,6 +502,10 @@ build ndstool</a><br>
 build picasso</a><br>
 
 &lowast;
+<a href="emu/3ds/build_libctru.htm">
+build libctru</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_nds-examples.htm">
 build nds-examples</a><br>
 
