Nintendo 3DS How to build citro3d.

--- a/emu.htm
+++ b/emu.htm
@@ -506,6 +506,10 @@ build picasso</a><br>
 build libctru</a><br>
 
 &lowast;
+<a href="emu/3ds/build_citro3d.htm">
+build citro3d</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_nds-examples.htm">
 build nds-examples</a><br>
 
