Nintendo 3DS How to build citro2d.

--- a/emu.htm
+++ b/emu.htm
@@ -506,6 +506,10 @@ build picasso</a><br>
 build libctru</a><br>
 
 &lowast;
+<a href="emu/3ds/build_citro2d.htm">
+build citro2d</a><br>
+
+&lowast;
 <a href="emu/3ds/build_citro3d.htm">
 build citro3d</a><br>
 
