Nintendo 3DS How to build tex3ds.

--- a/emu.htm
+++ b/emu.htm
@@ -486,6 +486,10 @@ build libfat</a><br>
 build dswifi</a><br>
 
 &lowast;
+<a href="emu/3ds/build_tex3ds.htm">
+build tex3ds</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_mmutil.htm">
 build mmutil</a><br>
 
