--- a/emu/3ds/build_tex3ds.htm
+++ b/emu/3ds/build_tex3ds.htm
@@ -52,6 +52,8 @@
 步驟如下：
 </p>
 <pre>
+$ sudo apt-get install libmagic++-dev libfftw3-dev -y
+
 $ cd
 $ git clone https://github.com/devkitPro/tex3ds
 $ cd tex3ds
