Nintendo 3DS How to build 3dstools.

--- a/emu.htm
+++ b/emu.htm
@@ -518,6 +518,10 @@ build citro2d</a><br>
 build citro3d</a><br>
 
 &lowast;
+<a href="emu/3ds/build_3dstools.htm">
+build 3dstools</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_nds-examples.htm">
 build nds-examples</a><br>
 
