Nintendo 3DS Updated path.

--- a/emu/3ds/build_devkitpro.htm
+++ b/emu/3ds/build_devkitpro.htm
@@ -102,7 +102,7 @@ $ file /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc
     /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc: ELF 64-bit LSB executable, ARM aarch64, version 1 (SYSV), dynamically linked, interpreter /lib/ld-linux-aarch64.so.1, for GNU/Linux 3.7.0, BuildID[sha1]=ed7388c909e11eb3c2fc7891199d8cb927fb6f5f, stripped
 </pre>
 <p>
-P.S. 編譯過程中，需要的rules相關檔案，可以從<a href="https://github.com/steward-fu/3ds/releases/download/v1.0/devkitpro_docker_elf_x64.tar.gz">devkitpro_x64</a>提取
+P.S. 編譯過程中，需要的rules相關檔案，可以從<a href="https://github.com/steward-fu/3ds/releases/download/v1.0/devkitpro_elf_x64.tar.gz">devkitpro_x64</a>提取
 </p>
 
 <p>
