Nintendo 3DS Added dependency.

--- a/emu/3ds/build_devkitpro.htm
+++ b/emu/3ds/build_devkitpro.htm
@@ -57,7 +57,7 @@ Debian 10 x64
 <pre>
 $ sudo dpkg --add-architecture arm64
 $ sudo apt-get update
-$ sudo apt-get install libmpc-dev:arm64 libmpfr-dev:arm64 lib-gmp:arm64 qemu qemu-user-static -y
+$ sudo apt-get install libmpc-dev:arm64 libmpfr-dev:arm64 lib-gmp:arm64 zlib1g-dev:arm64 qemu qemu-user-static -y
 
 $ sudo chmod 0777 /opt
 $ cd
