Nintendo 3DS How to build devkitpro with armhf toolchain.

--- a/emu.htm
+++ b/emu.htm
@@ -534,6 +534,10 @@ build general-tools</a><br>
 build devkitpro (CROSSBUILD=aarch64-linux-gnu)</a><br>
 
 &lowast;
+<a href="emu/3ds/build_devkitpro_armhf.htm">
+build devkitpro (CROSSBUILD=arm-linux-gnueabihf)</a><br>
+
+&lowast;
 <a href="emu/3ds/fix_crossbuild.htm">
 解決"gcc.cc: undefined reference to host_detect_local_cpu(int, char const**)"問題</a><br>
 
