Nintendo 3DS Added dependency.

--- a/emu/3ds/build_devkitpro_armhf.htm
+++ b/emu/3ds/build_devkitpro_armhf.htm
@@ -59,7 +59,7 @@ Debian 10 x64
 $ sudo dpkg --add-architecture armhf
 $ sudo apt-get update
 $ sudo apt-get install crossbuild-essential-armhf
-$ sudo apt-get install libmpc*:armhf libgmp-dev:armhf libgmp10:armhf libgmpxx4ldbl:armhf libmpfr6:armhf libstdc++6:armhf
+$ sudo apt-get install libmpc*:armhf libgmp-dev:armhf libgmp10:armhf libgmpxx4ldbl:armhf libmpfr6:armhf libstdc++6:armhf zlib1g-dev:armhf qemu qemu-user-static -y
 
 $ sudo chmod 0777 /opt
 $ cd
