Nintendo 3DS How to build 3ds-example.

--- a/emu.htm
+++ b/emu.htm
@@ -526,6 +526,10 @@ build 3dstools</a><br>
 build nds-examples</a><br>
 
 &lowast;
+<a href="emu/3ds/build_3ds-examples.htm">
+build 3ds-examples</a><br>
+
+&lowast;
 <a href="emu/ndsl/build_general-tools.htm">
 build general-tools</a><br>
 
