--- a/emu/gba/cpp_hello.htm
+++ b/emu/gba/cpp_hello.htm
@@ -97,15 +97,7 @@ clean:
 </p>
 <pre>
 $ sudo docker run --rm -it -v $(pwd):/source nds-env /bin/bash
-
-root@960f333001cb:/source# make
-    arm-none-eabi-gcc -mcpu=arm7tdmi -mtune=arm7tdmi -fomit-frame-pointer -ffast-math -mthumb -mthumb-interwork -I/opt/devkitpro/libgba/include -c main.c -o main.o
-    arm-none-eabi-gcc -mthumb -mthumb-interwork -specs=gba.specs main.o -L/opt/devkitpro/libgba/lib -lgba -o main.elf
-    arm-none-eabi-objcopy -O binary main.elf main.gba
-
-root@960f333001cb:/source# exit
-    exit
-
+root@960f333001cb:/source# make &amp;&amp; exit
 $ mgba main.gba 
 </pre><br>
 
