Game Boy Advance A example to show how to get input in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -393,6 +393,10 @@ LCD</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/gba/cpp_hello.htm">
   hello, world!</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/gba/cpp_input.htm">
+  Input</a><br>
 <br><br><br><br>
 
 <div id="ndsl"></div>
