Game Boy Advance An example to show how to draw color in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -397,6 +397,10 @@ LCD</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/gba/cpp_input.htm">
   Input</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/gba/cpp_fill.htm">
+  Fill Color</a><br>
 <br><br><br><br>
 
 <div id="ndsl"></div>
