Nintendo DS Lite Updated build steps.

--- a/emu/ndsl/build_devkitpro.htm
+++ b/emu/ndsl/build_devkitpro.htm
@@ -93,7 +93,7 @@ $ /opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc -v
   gcc version 11.1.0 (devkitARM release 56)
 </pre>
 <p>
-P.S. 由於目前手動編譯出來的toolchain都無法編譯出可以用的NDS檔案，因此，建議使用司徒從docker提取的檔案(<a href="https://github.com/steward-fu/ndsl/releases/download/v1.0/devkitpro_elf.tar.gz">devkitpro_elf.tar.gz</a>)，Debian 10 x64可以直接使用
+P.S. 如果不想手動編譯，可以直接使用從docker提取的檔案(<a href="https://github.com/steward-fu/ndsl/releases/download/v1.0/devkitpro_elf_x64.tar.gz">devkitpro_elf_x64.tar.gz</a>)
 </p>
 
 <p>
