Nintendo DS Lite Updated steps.

--- a/emu/ndsl/cpp_setup.htm
+++ b/emu/ndsl/cpp_setup.htm
@@ -52,7 +52,7 @@
 參考資訊：<br>
 1. <a href="https://github.com/morgenman/nds-docker">nds-docker</a><br><br>
 
-目前新版的devkitpro開發工具，司徒手動編譯後，無法編譯出正常的NDS來測試，因此，目前使用docker當作開發環境，測試使用的模擬器則是DeSmuME，安裝步驟如下：
+司徒目前使用docker當作開發環境，模擬器則是使用DeSmuME，安裝步驟如下：
 </p>
 <pre>
 $ sudo apt-get install docker* container* desmume -y
