--- a/emu/gba/cpp_hello.htm
+++ b/emu/gba/cpp_hello.htm
@@ -55,8 +55,8 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>PrintConsole* consoleDemoInit(void)</td><td>Initialize the console to a default state for prototyping</td></tr>
+<tr><th>API</th></tr>
+<tr><td>PrintConsole* consoleDemoInit(void)</td></tr>
 </table><br>
 
 <p>
