Nintendo DS Lite Refined code.

--- a/emu/ndsl/cpp_hello.htm
+++ b/emu/ndsl/cpp_hello.htm
@@ -55,9 +55,9 @@
 說明：
 </p>
 <table>
-<tr><th>API</th><th>Description</th></tr>
-<tr><td>PrintConsole* consoleDemoInit(void)</td><td>Initialize the console to a default state for prototyping</td></tr>
-<tr><td>void swiWaitForVBlank(void)</td><td>Waits for a vertical blank interrupt</td></tr>
+<tr><th>API</th></tr>
+<tr><td>PrintConsole* consoleDemoInit(void)</td></tr>
+<tr><td>void swiWaitForVBlank(void)</td></tr>
 </table><br>
 
 <p>
