Nintendo DS Lite An example to show how to get keypad value in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -466,6 +466,10 @@ build general-tools</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_hello.htm">
   hello, world!</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/ndsl/cpp_input.htm">
+  Input</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
