Nintendo DS Lite Refined code.

--- a/emu.htm
+++ b/emu.htm
@@ -469,7 +469,7 @@ build general-tools</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_input.htm">
-  Input</a><br>
+  Input (DPad)</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
