--- a/emu/ndsl/cpp_input.htm
+++ b/emu/ndsl/cpp_input.htm
@@ -46,7 +46,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Nintendo DS Lite &gt;&gt; C/C++</h3>
-<p><b>Input</b></p>
+<p><b>Input (DPad)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -59,6 +59,28 @@
 <tr><td>void scanKeys(void)</td></tr>
 <tr><td>uint32 keysDown(void)</td></tr>
 </table><br>
+
+<p>
+按鍵：
+</p>
+<pre class="brush:cpp">
+typedef enum KEYPAD_BITS {
+  KEY_A      = BIT(0),  //!&lt; Keypad A button.
+  KEY_B      = BIT(1),  //!&lt; Keypad B button.
+  KEY_SELECT = BIT(2),  //!&lt; Keypad SELECT button.
+  KEY_START  = BIT(3),  //!&lt; Keypad START button.
+  KEY_RIGHT  = BIT(4),  //!&lt; Keypad RIGHT button.
+  KEY_LEFT   = BIT(5),  //!&lt; Keypad LEFT button.
+  KEY_UP     = BIT(6),  //!&lt; Keypad UP button.
+  KEY_DOWN   = BIT(7),  //!&lt; Keypad DOWN button.
+  KEY_R      = BIT(8),  //!&lt; Right shoulder button.
+  KEY_L      = BIT(9),  //!&lt; Left shoulder button.
+  KEY_X      = BIT(10), //!&lt; Keypad X button.
+  KEY_Y      = BIT(11), //!&lt; Keypad Y button.
+  KEY_TOUCH  = BIT(12), //!&lt; Touchscreen pendown.
+  KEY_LID    = BIT(13)  //!&lt; Lid state.
+} KEYPAD_BITS;
+</pre><br>
 
 <p>
 main.c
