Nintendo DS Lite An example to show how to get touch value in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -470,6 +470,10 @@ build general-tools</a><br>
   &emsp;&emsp;&lowast;
   <a href="emu/ndsl/cpp_input.htm">
   Input (DPad)</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="emu/ndsl/cpp_touch.htm">
+  Input (Touch)</a><br>
 <br><br><br><br>
 
 <div id="3ds"></div>
