Debian How to use clang-format.

--- a/system.htm
+++ b/system.htm
@@ -116,6 +116,10 @@ time diff</a><br>
 掛載ubifs檔案</a><br>
 
 &lowast;
+<a href="system/debian/clang-format.htm">
+clang-format</a><br>
+
+&lowast;
 <a href="system/debian/rename.htm">
 將檔名都轉成小寫</a><br>
 
