CNC1610 Pro How to make baffle in OpenSCAD.

--- a/picture.htm
+++ b/picture.htm
@@ -78,6 +78,7 @@
   <a href="#kicad"><img src="img/photos/kicad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="KiCAD"/></a>
   <a href="#fritzing"><img src="img/photos/fritzing.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fritzing"/></a>
   <a href="#gimp"><img src="img/photos/gimp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GIMP"/></a>
+  <a href="#cnc1610pro"><img src="img/photos/cnc1610pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CNC1610 Pro"/></a>
   <a href="#cr7"><img src="img/photos/cr7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CR-7 3D印表機"/></a>
   <a href="#mini-kossel"><img src="img/photos/mini-kossel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Kossel 3D印表機"/></a>
   <a href="#m3d"><img src="img/photos/m3d.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Micro 3D印表機"/></a>
@@ -242,6 +243,16 @@ GIMP</h3>
 &lowast;
 <a href="picture/gimp/preview.htm">
 如何設定Preview Image的檔案大小</a>
+<br><br><br><br>
+
+<div id="cnc1610pro"></div>
+<h3><img src="img/photos/cnc1610pro.jpg" class="floatLeft"/>
+CNC1610 Pro</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="picture/cnc1610pro/wall.htm">
+自製擋板</a><br>
 <br><br><br><br>
 
 <div id="cr7"></div>
