(MCU M68HC08) MC68HC908JB8 Added pcb image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -82,6 +82,7 @@
   <a href="#epm240t100c5n"><img src="img/photos/epm240t100c5n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
   <a href="#ep4ce6e22c8n"><img src="img/photos/ep4ce6e22c8n.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EP4CE6E22C8N"/></a>
   <a href="#epm240t100c5n-1"><img src="img/photos/epm240t100c5n-1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(FPGA) EPM240T100C5N"/></a>
+  <a href="#mc68hc908jb8"><img src="img/photos/mc68hc908jb8.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU M68HC08) MC68HC908JB8"/></a>
   <a href="#stc15w104"><img src="img/photos/stc15w104.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU 8051) STC15W104"/></a>
   <a href="#stc15w204s"><img src="img/photos/stc15w204s.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU 8051) STC15W204S"/></a>
   <a href="#stc15w4k56s4"><img src="img/photos/stc15w4k56s4.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="(MCU 8051) STC15W4K56S4"/></a>
@@ -366,6 +367,16 @@ Patch Anlogic TD License</a><br>
 <h3><img src="img/photos/epm240t100c5n-1.jpg" class="floatLeft"/>
 <b>(FPGA)</b> EPM240T100C5N</h3>
 <hr size="1"><br><br><br><br><br>
+<br><br><br><br>
+
+<div id="mc68hc908jb8"></div>
+<h3><img src="img/photos/mc68hc908jb8.jpg" class="floatLeft"/>
+<b>(MCU M68HC08)</b> MC68HC908JB8</h3>
+<hr size="1"><br><br><br><br><br>
+
+&lowast;
+<a href="mcu/mc68hc908jb8/pcb.htm">
+開發板</a><br>
 <br><br><br><br>
 
 <div id="stc15w104"></div>
