--- a/mcu/mc68hc908jb8/pcb.htm
+++ b/mcu/mc68hc908jb8/pcb.htm
@@ -56,7 +56,10 @@
 <img src="pcb/1.jpg" class="maxSize"><br>
 <img src="pcb/8.jpg" class="maxSize"><br><br>
 
-基於國外網友的電路圖，司徒決定照抄一份，相關材料如下：<br>
+基於國外網友的電路圖，司徒決定照抄一份，值得注意的地方是，VREG提供3.3V電壓輸出(記得加上4.7uF)<br>
+<img src="pcb/9.jpg" class="maxSize"><br><br>
+
+材料<br>
 <img src="pcb/2.jpg" class="maxSize"><br><br>
 
 由於司徒使用USB-UART轉接線，因此，額外使用一個升壓模組，用來將5V升壓到8V，因為MC68HC908JB8要進入Monitor Mode時，IRQ必須連接7~10V電壓<br>
