(MCU M68HC08) MC68HC908JB8 Added pinout image.

--- a/mcu.htm
+++ b/mcu.htm
@@ -375,6 +375,10 @@ Patch Anlogic TD License</a><br>
 <hr size="1"><br><br><br><br><br>
 
 &lowast;
+<a href="mcu/mc68hc908jb8/pinout.htm">
+腳位</a><br>
+
+&lowast;
 <a href="mcu/mc68hc908jb8/pcb.htm">
 開發板</a><br>
 <br><br><br><br>
