(MCU M68HC08) MC68HC908JB8 Added note.

--- a/mcu/mc68hc908jb8/pcb.htm
+++ b/mcu/mc68hc908jb8/pcb.htm
@@ -57,7 +57,8 @@
 <img src="pcb/8.jpg" class="maxSize"><br><br>
 
 基於國外網友的電路圖，司徒決定照抄一份，值得注意的地方是，VREG提供3.3V電壓輸出(記得加上4.7uF)<br>
-<img src="pcb/9.jpg" class="maxSize"><br><br>
+<img src="pcb/9.jpg" class="maxSize"><br>
+P.S. RST腳位有內部提昇電阻<br><br>
 
 材料<br>
 <img src="pcb/2.jpg" class="maxSize"><br><br>
