(MCU M68HC08) MC68HC908JB8 Added interrupt table.

--- a/mcu.htm
+++ b/mcu.htm
@@ -379,6 +379,10 @@ Patch Anlogic TD License</a><br>
 腳位</a><br>
 
 &lowast;
+<a href="mcu/mc68hc908jb8/int.htm">
+中斷表</a><br>
+
+&lowast;
 <a href="mcu/mc68hc908jb8/pcb.htm">
 開發板</a><br>
 <br><br><br><br>
