(MCU M68HC08) MC68HC908JB8 Added memory map.

--- a/mcu.htm
+++ b/mcu.htm
@@ -383,6 +383,10 @@ Patch Anlogic TD License</a><br>
 中斷表</a><br>
 
 &lowast;
+<a href="mcu/mc68hc908jb8/mmap.htm">
+Memory Map</a><br>
+
+&lowast;
 <a href="mcu/mc68hc908jb8/pcb.htm">
 開發板</a><br>
 <br><br><br><br>
