(MCU M68HC08) MC68HC908JB8 How to prepare environment for development.

--- a/mcu.htm
+++ b/mcu.htm
@@ -393,6 +393,13 @@ Memory Map</a><br>
 &lowast;
 <a href="mcu/mc68hc908jb8/pcb.htm">
 開發板</a><br>
+
+&oplus;
+<b>Assembly</b><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mc68hc908jb8/asm_setup.htm">
+  開發環境</a><br>
 <br><br><br><br>
 
 <div id="stc15w104"></div>
