(MCU M68HC08) MC68HC908JB8 An example to show how to blink LED in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -400,6 +400,10 @@ Memory Map</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mc68hc908jb8/asm_setup.htm">
   開發環境</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mc68hc908jb8/asm_led.htm">
+  LED</a><br>
 <br><br><br><br>
 
 <div id="stc15w104"></div>
