(MCU M68HC08) MC68HC908JB8 An example to show how to get input value from button in assembly.

--- a/mcu.htm
+++ b/mcu.htm
@@ -404,6 +404,10 @@ Memory Map</a><br>
   &emsp;&emsp;&lowast;
   <a href="mcu/mc68hc908jb8/asm_led.htm">
   LED</a><br>
+  
+  &emsp;&emsp;&lowast;
+  <a href="mcu/mc68hc908jb8/asm_btn.htm">
+  Button</a><br>
 <br><br><br><br>
 
 <div id="stc15w104"></div>
