(MCU M68HC08) MC68HC908JB8 Monitor mode.

--- a/mcu.htm
+++ b/mcu.htm
@@ -391,6 +391,10 @@ bl08.c</a><br>
 Memory Map</a><br>
 
 &lowast;
+<a href="mcu/mc68hc908jb8/monitor.htm">
+Monitor Mode</a><br>
+
+&lowast;
 <a href="mcu/mc68hc908jb8/pcb.htm">
 開發板</a><br>
 
