Nintendo 3DS An example to show how to control LCD backlight in C/C++.

--- a/emu.htm
+++ b/emu.htm
@@ -629,6 +629,10 @@ build devkitpro (CROSSBUILD=arm-linux-gnueabihf)</a><br>
   Linear Memory</a><br>
 
   &emsp;&emsp;&lowast;
+  <a href="emu/3ds/cpp_lcd_backlight.htm">
+  LCD Backlight</a><br>
+
+  &emsp;&emsp;&lowast;
   <a href="emu/3ds/cpp_screentearingtest.htm">
   Screen Tearing Test</a><br>
 
