CNC1610 Pro Updated images.

--- a/picture/cnc1610pro/wall.htm
+++ b/picture/cnc1610pro/wall.htm
@@ -79,6 +79,19 @@ difference() {
 	}
 }
 </pre><br>
+<p>
+列印完成<br>
+<img src="wall/2.jpg" class="maxSize"><br><br>
+
+使用三秒膠固定<br>
+<img src="wall/3.jpg" class="maxSize"><br><br>
+
+原本樣子<br>
+<img src="wall/4.jpg" class="maxSize"><br><br>
+
+終於不用怕PCB屑屑亂飛<br>
+<img src="wall/5.jpg" class="maxSize">
+</p>
 
 <p>
 <br><a href="../../picture.htm">返回上一頁</a>
