Rust An example to show how to access sqlite database.

--- a/program.htm
+++ b/program.htm
@@ -327,6 +327,10 @@ Rust</h3>
 <a href="program/rust/hello.htm">
 Hello, world!</a><br>
 
+&lowast;
+<a href="program/rust/sqlx.htm">
+SQLx</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
@@ -345,7 +349,6 @@ Hello, world!</a><br>
   &emsp;&emsp;&lowast;
   <a href="program/rust/sdl_loadbmp.htm">
   Load BMP</a><br>
-
 <br><br><br><br>
 
 <div id="masm32"></div>
