Rust An example to show how to setup webserver.

--- a/program.htm
+++ b/program.htm
@@ -331,6 +331,10 @@ Hello, world!</a><br>
 <a href="program/rust/sqlx.htm">
 SQLx</a><br>
 
+&lowast;
+<a href="program/rust/webserver.htm">
+Web Server</a><br>
+
 &oplus;
 <b>SDL v1.2</b><br>
 
