--- a/program/rust/webserver.htm
+++ b/program/rust/webserver.htm
@@ -45,78 +45,51 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Rust</h3>
-<p><b>SQLx</b></p>
+<p><b>Web Server</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
-1. <a href="https://gitee.com/naylor_personal/rust-actix/tree/master/workspace/db">gitee</a><br>
-2. <a href="https://ithelp.ithome.com.tw/articles/10272280">ithome</a><br><br>
-
-安裝SQLite
-</p>
-<pre>
-$ sudo apt-get install sqlite sqlitebrowser -y
-</pre><br>
-
-<p>
-建立Database
-</p>
-<pre>
-export DATABASE_URL="sqlite:test.db"
-
-$ cd
-$ sqlx migrate add test
-$ vim vim migrations/xxx_test.sql
-    -- Add migration script here
-    CREATE TABLE account (
-         name TEXT PRIMARY KEY,
-         password TEXT NOT NULL
-    );
-
-$ sqlx db create
-$ sqlx migrate run 
-$ sqlitebrowser test.db
-</pre>
-<p>
-<img src="sqlx/1.jpg" class="maxSize"><br><br>
+1. <a href="https://www.readfog.com/a/1673773161454342144">readfog</a><br><br>
 
 Rust
 </p>
 <pre>
 $ cargo new hello
-$ cp test.db hello
 $ cd hello
-$ cat Cargo.toml 
+$ cat Cargo.toml
     [package]
     name = "hello"
     version = "0.1.0"
     edition = "2021"
 
     [dependencies]
-    sqlx = { version = "0.5.7", features = [ "runtime-tokio-rustls", "sqlite" ] }
-    tokio = { version = "1.12.0", features = ["full"] }
-    anyhow = "1.0"
-    futures = "0.3"
+    axum = "0"
+    tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
 
 $ cat src/main.rs 
-    use sqlx::sqlite::SqlitePool;
+    use std::net::SocketAddr;
+    use axum::{response::Html, routing::get, Router};
 
     #[tokio::main]
-    async fn main() -&gt; anyhow::Result&lt;()&gt; {
-        let pool = SqlitePool::connect("sqlite:test.db").await?;
-        
-        let user : &amp;str = "test";
-        let pass : &amp;str = "1234";
-        let _add = sqlx::query!(r#"insert into account(name, password) values($1, $2)"#, user, pass,).fetch_all(&amp;pool).await?;
-        Ok(())
+    async fn main() {
+        let app = Router::new().route("/", get(handler));
+        let addr = SocketAddr::from(([127, 0, 0, 1], 3000));
+        axum::Server::bind(&amp;addr)
+            .serve(app.into_make_service())
+            .await
+            .unwrap();
+    }
+
+    async fn handler() -&gt; Html&lt;&amp;'static str&gt; {
+        Html("&lt;h1&gt;Hello, world!&lt;/h1&gt;")
     }
 
 $ cargo build
 $ cargo run
-$ sqlitebrowser test.db
-</pre>
+</pre><br>
 <p>
-<img src="sqlx/2.jpg" class="maxSize">
+開啟網頁並且輸入<b>http://127.0.0.1:3000</b><br>
+<img src="webserver/1.jpg" class="maxSize">
 </p>
 
 <p>
